[OWL-47] Set static_root_path = dist to reduce page load time of Grafana

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -24,6 +24,7 @@
   </head>
 
 	<body ng-cloak ng-controller="GrafanaCtrl" ng-class="{'sidemenu-open': contextSrv.sidemenu}">
+		<div id="main" style="width:400px;height:400px;"></div>
 		<div class="sidemenu-canvas">
 
 			<aside class="sidemenu-wrapper" ng-if="contextSrv.sidemenu">
